feat: add product name
